<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            app:showAsAction="ifRoom"
            android:id="@+id/sort_by_date"
            android:title="@string/sort_by_date"
            android:icon="@drawable/ic_sort"/>
</menu>